@@ -9,7 +9,7 @@
 			<orient>wxVERTICAL</orient>
 			<object class="sizeritem">
 				<object class="wxTextCtrl" name="ID_TEXTCTRL1" variable="TextCtrl1" member="yes">
-					<value>Simulator Keyboard and Mouse Controls from the readme.txt file:&#x0A;&#x0A;--- Keyboard ---&#x0A;W or Up Arrow - move forwards&#x0A;S or Down Arrow - move backwards&#x0A;A or Left Arrow - move left&#x0A;D or Right Arrow - move right&#x0A;PgUp - Look upwards&#x0A;PgDown - Look downwards&#x0A;Space - Jump&#x0A;Home - Float upwards (or jump if collision detection is on)&#x0A;End - Float downwards (or crouch if collision detection is on)&#x0A;F2 - print FPS on console&#x0A;F3 - Reset camera rotation and zoom to default&#x0A;F4 - Enable/disable wireframe mode&#x0A;F5 - Freelook (mouse look) mode&#x0A;F6 - Full camera reset (respawn)&#x0A;F10 - Fullscreen mode&#x0A;F11 - Take screenshot&#x0A;Shift - Run (hold down with other keys)&#x0A;Control - Walk slowly (hold down with other keys)&#x0A;Alt + arrow keys - Strafe&#x0A;Alt + PgUp - Spin right&#x0A;Alt + PgDown - Spin left&#x0A;Plus - Zoom in (decrease FOV angle)&#x0A;Minus - Zoom out (increase FOV angle)&#x0A;Esc - exit to main menu&#x0A;&#x0A;--- Mouse actions ---&#x0A;-elevator shaft doors can be manually opened and closed by holding down the Shift key and clicking on them&#x0A;-hallway call buttons can be lit and unlit also by holding down Shift and clicking on them (this does not call an elevator, but just changes the light status)&#x0A;-polygons (wall/floor sides) can be deleted by holding down Ctrl and clicking on the object&#x0A;&#x0A;--- Debug options ---&#x0A;Other functions are available via a Crystal Space plugin called BugPlug.&#x0A;To type a debug command: type ctrl-d and then press the bugplug key (so for wireframe mode, you&apos;d press ctrl-d, the screen will prompt you for a command, and then you&apos;d type &quot;e&quot;.)&#x0A;To select an object/mesh: type ctrl-s and then click on an object&#x0A;&#x0A;Show wireframe mode (the second command is needed due to a quirk with the wxGL plugin - also make sure you turn off the sky when doing this):&#x0A;ctrl-d e&#x0A;ctrl-d c&#x0A;&#x0A;Disable wireframe mode:&#x0A;ctrl-d e&#x0A;&#x0A;change gamma:&#x0A;ctrl-d g&#x0A;&#x0A;show camera info:&#x0A;ctrl-d shift-c&#x0A;&#x0A;dump info on all CS engine objects:&#x0A;ctrl-d d&#x0A;&#x0A;dump all 3D info to an xml file (saves to world0.xml):&#x0A;ctrl-d f10&#x0A;&#x0A;change FOV:&#x0A;ctrl-d f&#x0A;&#x0A;change FOV angle:&#x0A;ctrl-d shift-f&#x0A;&#x0A;move meshes:&#x0A;first select an object using ctrl-s&#x0A;then,&#x0A;ctrl-d shift-up = move up (+y)&#x0A;ctrl-d shift-down = move down (-y)&#x0A;ctrl-d shift-left = left (-x)&#x0A;ctrl-d shift-right = right (+x)&#x0A;ctrl-d shift-pgup = forward (+z)&#x0A;ctrl-d shift-pgdn = backward (-z)&#x0A;&#x0A;screenshots:&#x0A;ctrl-d f11 = normal&#x0A;ctrl-d shift-f11 = large&#x0A;&#x0A;show/hide FPS display:&#x0A;ctrl-d ctrl-alt-p&#x0A;&#x0A;hide selected mesh:&#x0A;ctrl-d h&#x0A;&#x0A;unhide selected mesh:&#x0A;ctrl-d shift-h&#x0A;&#x0A;select mesh(es) by name:&#x0A;ctrl-d ctrl-alt-m&#x0A;&#x0A;list loaded CS plugins:&#x0A;ctrl-d ctrl-alt-l&#x0A;</value>
+					<value>Simulator Keyboard and Mouse Controls from the readme.txt file:&#x0A;&#x0A;--- Keyboard ---&#x0A;W or Up Arrow - move forwards&#x0A;S or Down Arrow - move backwards&#x0A;A or Left Arrow - move left&#x0A;D or Right Arrow - move right&#x0A;PgUp - Look upwards&#x0A;PgDown - Look downwards&#x0A;Space - Jump&#x0A;Home - Float upwards (or jump if collision detection is on)&#x0A;End - Float downwards (or crouch if collision detection is on)&#x0A;F2 - print FPS on console&#x0A;F3 - Reset camera rotation and zoom to default&#x0A;F4 - Enable/disable wireframe mode&#x0A;F5 - Freelook (mouse look) mode&#x0A;F6 - Full camera reset (respawn)&#x0A;F10 - Fullscreen mode&#x0A;F11 - Take screenshot&#x0A;F12 - Show control panel&#x0A;Shift - Run (hold down with other keys)&#x0A;Control - Walk slowly (hold down with other keys)&#x0A;Alt + arrow keys - Strafe&#x0A;Alt + PgUp - Spin right&#x0A;Alt + PgDown - Spin left&#x0A;Plus - Zoom in (decrease FOV angle)&#x0A;Minus - Zoom out (increase FOV angle)&#x0A;Esc - exit to main menu&#x0A;&#x0A;--- Mouse actions ---&#x0A;-elevator shaft doors can be manually opened and closed by holding down the Shift key and clicking on them&#x0A;-hallway call buttons can be lit and unlit also by holding down Shift and clicking on them (this does not call an elevator, but just changes the light status)&#x0A;-polygons (wall/floor sides) can be deleted by holding down Ctrl and clicking on the object&#x0A;&#x0A;--- Debug options ---&#x0A;Other functions are available via a Crystal Space plugin called BugPlug.&#x0A;To type a debug command: type ctrl-d and then press the bugplug key (so for wireframe mode, you&apos;d press ctrl-d, the screen will prompt you for a command, and then you&apos;d type &quot;e&quot;.)&#x0A;To select an object/mesh: type ctrl-s and then click on an object&#x0A;&#x0A;Show wireframe mode (the second command is needed due to a quirk with the wxGL plugin - also make sure you turn off the sky when doing this):&#x0A;ctrl-d e&#x0A;ctrl-d c&#x0A;&#x0A;Disable wireframe mode:&#x0A;ctrl-d e&#x0A;&#x0A;change gamma:&#x0A;ctrl-d g&#x0A;&#x0A;show camera info:&#x0A;ctrl-d shift-c&#x0A;&#x0A;dump info on all CS engine objects:&#x0A;ctrl-d d&#x0A;&#x0A;dump all 3D info to an xml file (saves to world0.xml):&#x0A;ctrl-d f10&#x0A;&#x0A;change FOV:&#x0A;ctrl-d f&#x0A;&#x0A;change FOV angle:&#x0A;ctrl-d shift-f&#x0A;&#x0A;move meshes:&#x0A;first select an object using ctrl-s&#x0A;then,&#x0A;ctrl-d shift-up = move up (+y)&#x0A;ctrl-d shift-down = move down (-y)&#x0A;ctrl-d shift-left = left (-x)&#x0A;ctrl-d shift-right = right (+x)&#x0A;ctrl-d shift-pgup = forward (+z)&#x0A;ctrl-d shift-pgdn = backward (-z)&#x0A;&#x0A;screenshots:&#x0A;ctrl-d f11 = normal&#x0A;ctrl-d shift-f11 = large&#x0A;&#x0A;show/hide FPS display:&#x0A;ctrl-d ctrl-alt-p&#x0A;&#x0A;hide selected mesh:&#x0A;ctrl-d h&#x0A;&#x0A;unhide selected mesh:&#x0A;ctrl-d shift-h&#x0A;&#x0A;select mesh(es) by name:&#x0A;ctrl-d ctrl-alt-m&#x0A;&#x0A;list loaded CS plugins:&#x0A;ctrl-d ctrl-alt-l&#x0A;</value>
 					<minsize>600,500</minsize>
 					<style>wxTE_MULTILINE|wxTE_READONLY</style>
 				</object>
